// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reminder not passed in renders correctly 1`] = `
Array [
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View />
  </View>,
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={false}
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "flex": 1,
          "opacity": 1,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "transform": Array [
            Object {
              "translateY": 378,
            },
          ],
        }
      }
    >
      <DateTimePicker
        locale="en-TEST"
        minimumDate={2018-01-02T00:39:39.887Z}
        mode="datetime"
        onChange={[Function]}
        style={
          Object {
            "borderTopColor": "#ccc",
            "borderTopWidth": 1,
            "marginTop": 60,
          }
        }
        testID="DateTimePicker"
        value={2018-01-02T00:39:39.887Z}
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#B4B6BA",
              "borderRadius": 35,
              "borderWidth": 1,
              "height": 70,
              "justifyContent": "center",
              "margin": 8,
              "opacity": 1,
              "paddingHorizontal": 0,
              "paddingVertical": 0,
              "width": 70,
            }
          }
          testID="ReminderRepeatButtonDaily"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#ffffff",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "lineHeight": 18,
                  "textAlign": "center",
                  "textAlignVertical": "center",
                  "textTransform": "uppercase",
                },
                Array [
                  Object {
                    "color": "#505256",
                    "fontFamily": "SourceSansPro-Regular",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "letterSpacing": 1,
                    "lineHeight": 16,
                    "textAlignVertical": "center",
                    "textTransform": "none",
                  },
                  Object {
                    "color": "#B4B6BA",
                  },
                ],
              ]
            }
          >
            Daily
          </Text>
        </View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#B4B6BA",
              "borderRadius": 35,
              "borderWidth": 1,
              "height": 70,
              "justifyContent": "center",
              "margin": 8,
              "opacity": 1,
              "paddingHorizontal": 0,
              "paddingVertical": 0,
              "width": 70,
            }
          }
          testID="ReminderRepeatButtonWeekly"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#ffffff",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "lineHeight": 18,
                  "textAlign": "center",
                  "textAlignVertical": "center",
                  "textTransform": "uppercase",
                },
                Array [
                  Object {
                    "color": "#505256",
                    "fontFamily": "SourceSansPro-Regular",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "letterSpacing": 1,
                    "lineHeight": 16,
                    "textAlignVertical": "center",
                    "textTransform": "none",
                  },
                  Object {
                    "color": "#B4B6BA",
                  },
                ],
              ]
            }
          >
            Weekly
          </Text>
        </View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#B4B6BA",
              "borderRadius": 35,
              "borderWidth": 1,
              "height": 70,
              "justifyContent": "center",
              "margin": 8,
              "opacity": 1,
              "paddingHorizontal": 0,
              "paddingVertical": 0,
              "width": 70,
            }
          }
          testID="ReminderRepeatButtonMonthly"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#ffffff",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "lineHeight": 18,
                  "textAlign": "center",
                  "textAlignVertical": "center",
                  "textTransform": "uppercase",
                },
                Array [
                  Object {
                    "color": "#505256",
                    "fontFamily": "SourceSansPro-Regular",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "letterSpacing": 1,
                    "lineHeight": 16,
                    "textAlignVertical": "center",
                    "textTransform": "none",
                  },
                  Object {
                    "color": "#B4B6BA",
                  },
                ],
              ]
            }
          >
            Monthly
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "flexDirection": "row",
            "height": 60,
            "paddingHorizontal": 20,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "opacity": 1,
            }
          }
          testID="Button"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#ffffff",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "lineHeight": 18,
                  "textAlign": "center",
                  "textAlignVertical": "center",
                  "textTransform": "uppercase",
                },
                Array [
                  Object {
                    "color": "#007AFF",
                    "fontFamily": "SourceSansPro-Regular",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "lineHeight": 24,
                    "textAlignVertical": "center",
                    "textTransform": "none",
                  },
                  Object {
                    "textAlign": "left",
                  },
                ],
              ]
            }
          >
            Cancel
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#505256",
              "flex": 1,
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "lineHeight": 24,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Date
        </Text>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "opacity": 1,
            }
          }
          testID="Button"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#ffffff",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "lineHeight": 18,
                  "textAlign": "center",
                  "textAlignVertical": "center",
                  "textTransform": "uppercase",
                },
                Object {
                  "color": "#007AFF",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 16,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                  "lineHeight": 24,
                  "textAlignVertical": "center",
                  "textTransform": "none",
                },
              ]
            }
          >
            Done
          </Text>
        </View>
      </View>
    </View>
  </Modal>,
]
`;

exports[`reminder passed in renders correctly 1`] = `
Array [
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View />
  </View>,
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={false}
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "flex": 1,
          "opacity": 1,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "transform": Array [
            Object {
              "translateY": 378,
            },
          ],
        }
      }
    >
      <DateTimePicker
        locale="en-TEST"
        minimumDate={2018-01-02T00:39:39.887Z}
        mode="datetime"
        onChange={[Function]}
        style={
          Object {
            "borderTopColor": "#ccc",
            "borderTopWidth": 1,
            "marginTop": 60,
          }
        }
        testID="DateTimePicker"
        value={2015-11-13T20:52:21.990Z}
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#B4B6BA",
              "borderRadius": 35,
              "borderWidth": 1,
              "height": 70,
              "justifyContent": "center",
              "margin": 8,
              "opacity": 1,
              "paddingHorizontal": 0,
              "paddingVertical": 0,
              "width": 70,
            }
          }
          testID="ReminderRepeatButtonDaily"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#ffffff",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "lineHeight": 18,
                  "textAlign": "center",
                  "textAlignVertical": "center",
                  "textTransform": "uppercase",
                },
                Array [
                  Object {
                    "color": "#505256",
                    "fontFamily": "SourceSansPro-Regular",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "letterSpacing": 1,
                    "lineHeight": 16,
                    "textAlignVertical": "center",
                    "textTransform": "none",
                  },
                  Object {
                    "color": "#B4B6BA",
                  },
                ],
              ]
            }
          >
            Daily
          </Text>
        </View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#B4B6BA",
              "borderRadius": 35,
              "borderWidth": 1,
              "height": 70,
              "justifyContent": "center",
              "margin": 8,
              "opacity": 1,
              "paddingHorizontal": 0,
              "paddingVertical": 0,
              "width": 70,
            }
          }
          testID="ReminderRepeatButtonWeekly"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#ffffff",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "lineHeight": 18,
                  "textAlign": "center",
                  "textAlignVertical": "center",
                  "textTransform": "uppercase",
                },
                Array [
                  Object {
                    "color": "#505256",
                    "fontFamily": "SourceSansPro-Regular",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "letterSpacing": 1,
                    "lineHeight": 16,
                    "textAlignVertical": "center",
                    "textTransform": "none",
                  },
                  Object {
                    "color": "#B4B6BA",
                  },
                ],
              ]
            }
          >
            Weekly
          </Text>
        </View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#B4B6BA",
              "borderRadius": 35,
              "borderWidth": 1,
              "height": 70,
              "justifyContent": "center",
              "margin": 8,
              "opacity": 1,
              "paddingHorizontal": 0,
              "paddingVertical": 0,
              "width": 70,
            }
          }
          testID="ReminderRepeatButtonMonthly"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#ffffff",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "lineHeight": 18,
                  "textAlign": "center",
                  "textAlignVertical": "center",
                  "textTransform": "uppercase",
                },
                Array [
                  Object {
                    "color": "#505256",
                    "fontFamily": "SourceSansPro-Regular",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "letterSpacing": 1,
                    "lineHeight": 16,
                    "textAlignVertical": "center",
                    "textTransform": "none",
                  },
                  Object {
                    "color": "#B4B6BA",
                  },
                ],
              ]
            }
          >
            Monthly
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "flexDirection": "row",
            "height": 60,
            "paddingHorizontal": 20,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "opacity": 1,
            }
          }
          testID="Button"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#ffffff",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "lineHeight": 18,
                  "textAlign": "center",
                  "textAlignVertical": "center",
                  "textTransform": "uppercase",
                },
                Array [
                  Object {
                    "color": "#007AFF",
                    "fontFamily": "SourceSansPro-Regular",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "lineHeight": 24,
                    "textAlignVertical": "center",
                    "textTransform": "none",
                  },
                  Object {
                    "textAlign": "left",
                  },
                ],
              ]
            }
          >
            Cancel
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#505256",
              "flex": 1,
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "lineHeight": 24,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Date
        </Text>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "opacity": 1,
            }
          }
          testID="Button"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#ffffff",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "lineHeight": 18,
                  "textAlign": "center",
                  "textAlignVertical": "center",
                  "textTransform": "uppercase",
                },
                Object {
                  "color": "#007AFF",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 16,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                  "lineHeight": 24,
                  "textAlignVertical": "center",
                  "textTransform": "none",
                },
              ]
            }
          >
            Done
          </Text>
        </View>
      </View>
    </View>
  </Modal>,
]
`;
